--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ python:
 install:
   - pip install -r requirements.txt
 
+before_script:
+  - python manage.py migrate
+  
 script:
   - black --check .
   - flake8 .
@@ -13,3 +16,14 @@ script:
 
 after_script:
   - coveralls
+
+deploy:
+  provider: elasticbeanstalk
+  access_key_id:
+    secure: "Encrypted <AKIA576KQV22F4CSKT4I>="
+  secret_access_key:
+    secure: "Encypted <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>"
+  region: "us-west-2"
+  app: "polls"
+  env: "django-env"
+  bucket_name: "the-target-S3-bucket"
