--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ install:
 
 before_script:
   - python manage.py migrate
+  - python manage.py collectstatic --noinput
+  - black .
   
 script:
   - black --check .
