--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ python:
 
 install:
   - pip install -r requirements.txt
+  - pip install black
+  - pip install coverage
+  - pip install coveralls
+  - pip install flake8
 
 before_script:
   - python manage.py migrate
